# ngal

./: Cargo.toml  README.md  README_en.md  git.sh  index.html  nlist.html  scripting_tutorial.md  start.sh  update_history.txt  剧情编写教程.md
assets/: config.json  dialogue.json  dialogus1.json  game.json
assets/dialog/: dialogue.txt
save/: save.json  slot1.json  slot2.json  slot8.json  slot9.json
src/: app.rs  args.rs  audio.rs  config.rs  defaults.rs  dialogue.rs  image.rs  lib.rs  main.rs  main10.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs  main7.rs  main9.rs  parser.rs  save.rs  ui.rs  variables.rs
