[package]
name = "ngal"
version = "0.1.0"
edition = "2024"
description = "A terminal-based galgame engine written in Rust, currently still in testing"
readme = "README.md"
homepage = "https://nasyt.hoha.top"
repository = "https://github.com/nasyt233/ngal"
license = "MIT OR Apache-2.0"
keywords = ["ngal", "nasyt", "galgame", "game", ]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"